# Sorter

./: ._.env.example  ._multimedia_processor  .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  app.db  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: docker.yml  tests.yml
backend/: Dockerfile  app.db  backend.py  requirements.txt
backend/file_processor/: database.py  main.py
backend/file_processor/api/: deps.py  routers.py
backend/file_processor/core/: config.py  dependencies.py  security.py
backend/file_processor/crud/: user.py
backend/tests/: conftest.py
docs/: developer-guide.md  file-format-support.md  processing-pipeline.md  security-guide.md  user-guide.md
file_forge/: Dockerfile  __init__.py  advanced_ai.py  api.py  auth.py  auth_router.py  backup_system.py  cloud_storage.py  enterprise_api.py  file_types.py  notifications.py  processors.py  requirements.txt  smart_sorter.py  specialized_api.py  version_control.py
file_processor/: Dockerfile  README.md  advanced_ai_api.py  ai_processor.py  auth.py  auth_router.py  config.py  database.py  encryption.py  file_types.py  main.py  models.py  notifications.py  processors.py  requirements.txt  security.py  specialized_processors.py  version_control.py  workflow_engine.py
forge_backend/: backend.py  requirements.txt
forge_frontend/: frontend.py
forge_frontend/templates/: login.html
frontend/: Dockerfile  frontend.py  package-lock.json  package.json  requirements.txt
frontend/templates/: index.html  register.html  result.html
k8s/: deployment.yaml
multimedia_forge/: auth.py  database.py  media_usage.py  models.py  seed_admin.py  settings.py
multimedia_forge/tests/: test_api.py
multimedia_processor/: ._main.py  Dockerfile  api.py  auth.py  auth_router.py  config.py  encryption.py  factory.py  main.py  media_usage.py  models.py  operations.py  processors.py  requirements.txt  seed_admin.py
multimedia_processor/multimedia_processor/: factory.py
multimedia_processor/tests/: test_api.py
(+27 files in other folders)
