[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fileforge"
version = "1.0.0"
description = "Advanced file processing and sorting system"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "FileForge Team"}
]
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.1",
    "python-multipart>=0.0.21",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "cryptography>=44.0.0",
    "aiofiles>=24.1.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.28.1",
    "redis>=5.2.1",
    "celery>=5.4.0",
    "requests>=2.32.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
]
multimedia = [
    "pillow>=11.1.0",
    "pytesseract>=0.3.13",
    "opencv-python>=4.11.0.86",
    "numpy>=2.2.1",
    "moviepy>=1.0.3",
]
ai = [
    "transformers>=4.48.0",
    "torch>=2.5.1",
    "sentence-transformers>=3.1.1",
]

[project.urls]
Homepage = "https://github.com/fileforge/fileforge"
Repository = "https://github.com/fileforge/fileforge"

[tool.setuptools.packages.find]
where = ["."]
include = ["file_forge*", "forge_backend*", "forge_frontend*", "multimedia_forge*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "W", "I", "UP", "B", "C4", "ISC", "SIM"]
ignore = ["E501", "B008", "C901"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "E402"]
"tests/**/*.py" = ["S101", "B011"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = ["pytest", "pytest_asyncio", "celery", "redis", "httpx", "requests"]
ignore_missing_imports = true
